Add field reviewComment in service template view object